// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Avatar Simple 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": "20px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "space-around",
        "display": "flex",
        "marginBottom": "20px",
        "width": "90vw",
      }
    }
  >
    <div
      className="circle circle__brand-primary"
    >
      <img
        alt="avatar_img"
        className="image"
        src="test-file-stub"
      />
      <div
        className="label label__brand-primary"
      >
        Daniel Negreanu
      </div>
    </div>
  </div>
   
  <div
    style={
      Object {
        "alignItems": "space-around",
        "display": "flex",
        "marginBottom": "20px",
        "width": "90vw",
      }
    }
  >
    <div
      className="circle circle__brand-secondary"
    >
      <img
        alt="avatar_img"
        className="image"
        src="test-file-stub"
      />
      <div
        className="label label__brand-secondary"
      >
        Gus Hansen
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Primary 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": "20px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "150px",
        "justifyContent": "space-around",
        "marginBottom": "20px",
        "width": "100%",
      }
    }
  >
    <button
      className=" primary small "
      onClick={[Function]}
    >
      Small
      <div
        className="button_spinner_container "
      >
        <div
          className="button_spinner"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
    </button>
    <button
      className=" primary medium "
      onClick={[Function]}
    >
      Medium
      <div
        className="button_spinner_container "
      >
        <div
          className="button_spinner"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
    </button>
    <button
      className=" primary large "
      onClick={[Function]}
    >
      Large
      <div
        className="button_spinner_container "
      >
        <div
          className="button_spinner"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
    </button>
    <button
      className=" primary large disabled "
      disabled={true}
      onClick={[Function]}
    >
      Disabled
      <div
        className="button_spinner_container "
      >
        <div
          className="button_spinner"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Button Secondary 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": "20px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "150px",
        "justifyContent": "space-around",
        "marginBottom": "20px",
        "width": "100%",
      }
    }
  >
    <button
      className=" secondary small "
      onClick={[Function]}
    >
      Small
      <div
        className="button_spinner_container "
      >
        <div
          className="button_spinner"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
    </button>
    <button
      className=" secondary medium "
      onClick={[Function]}
    >
      Medium
      <div
        className="button_spinner_container "
      >
        <div
          className="button_spinner"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
    </button>
    <button
      className=" secondary large "
      onClick={[Function]}
    >
      Large
      <div
        className="button_spinner_container "
      >
        <div
          className="button_spinner"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
    </button>
    <button
      className=" secondary large disabled "
      disabled={true}
      onClick={[Function]}
    >
      Disabled
      <div
        className="button_spinner_container "
      >
        <div
          className="button_spinner"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Button With Loading 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": "20px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "150px",
        "justifyContent": "space-around",
        "marginBottom": "20px",
        "width": "100%",
      }
    }
  >
    <button
      className=" primary small "
      onClick={[Function]}
    >
      Primary Small
      <div
        className="button_spinner_container button_spinner_container__visible"
      >
        <div
          className="button_spinner"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
    </button>
    <button
      className=" primary medium "
      onClick={[Function]}
    >
      Primary Medium
      <div
        className="button_spinner_container button_spinner_container__visible"
      >
        <div
          className="button_spinner"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
    </button>
    <button
      className=" primary large "
      onClick={[Function]}
    >
      Primary Medium
      <div
        className="button_spinner_container button_spinner_container__visible"
      >
        <div
          className="button_spinner"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
    </button>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "150px",
        "justifyContent": "space-around",
        "marginBottom": "20px",
        "width": "100%",
      }
    }
  >
    <button
      className=" secondary small "
      onClick={[Function]}
    >
      Secondary
      <div
        className="button_spinner_container button_spinner_container__visible"
      >
        <div
          className="button_spinner"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
    </button>
    <button
      className=" secondary medium "
      onClick={[Function]}
    >
      Secondary Small
      <div
        className="button_spinner_container button_spinner_container__visible"
      >
        <div
          className="button_spinner"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
    </button>
    <button
      className=" secondary large "
      onClick={[Function]}
    >
      Secondary Large
      <div
        className="button_spinner_container button_spinner_container__visible"
      >
        <div
          className="button_spinner"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Card Partner 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": "20px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "marginBottom": "20px",
        "width": "90vw",
      }
    }
  >
    <div
      className="card"
    >
      <div
        className="card__header brand-primary"
      >
        <img
          alt="Zalando"
          className="card__header__img"
          src="test-file-stub"
        />
      </div>
      <div
        className="card__footer"
      >
        <div
          className="card__footer__top"
        >
          <h5>
            Zalando
          </h5>
          <h6>
            Prêt à porter
          </h6>
        </div>
        <p
          className=" ui-primary body_00 card__footer__text"
        >
          Créez un chèque-cadeau Amazon du montant de votre choix utilisable parmi des millions de produits en stock. Livres, jeux vidéos, high-tech, jouets, chaussures, vêtements, sport et plus encore ! sport et plus encore !sport et plus encore !
        </p>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Storyshots Checkbox Default 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": "20px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "150px",
        "justifyContent": "space-around",
        "marginBottom": "20px",
        "width": "100%",
      }
    }
  >
    <label
      className="container"
    >
      <input
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="checkmark"
      />
    </label>
    <label
      className="container"
    >
      <input
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="checkmark"
      />
      With Label
    </label>
    <label
      className="container"
    >
      <input
        disabled={true}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="checkmark checkmark__disabled"
      />
      Disabled
    </label>
    <label
      className="container"
    >
      <input
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="checkmark"
      />
      Success
    </label>
    <label
      className="container"
    >
      <input
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="checkmark checkmark__error"
      />
      Error
    </label>
  </div>
</div>
`;

exports[`Storyshots Input field Default 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingTop": "20px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "150px",
        "justifyContent": "space-around",
        "marginBottom": "20px",
        "width": "100%",
      }
    }
  >
    <div
      className="wrapper"
    >
      <label
        className="label"
      >
        Name
      </label>
      <div
        className="input__wrapper"
      >
        <input
          className="input"
          onChange={[Function]}
          placeholder="name"
        />
      </div>
    </div>
    <div
      className="wrapper"
    >
      <label
        className="label"
      >
        Name
      </label>
      <div
        className="input__wrapper"
      >
        <input
          className="input input__error"
          onChange={[Function]}
          placeholder="name"
        />
      </div>
    </div>
    <div
      className="wrapper"
    >
      <label
        className="label"
      >
        Name
      </label>
      <div
        className="input__wrapper"
      >
        <input
          className="input input__valid"
          onChange={[Function]}
          placeholder="name"
        />
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "150px",
        "justifyContent": "space-around",
        "marginBottom": "20px",
        "width": "100%",
      }
    }
  >
    <div
      className="wrapper"
    >
      <label
        className="label"
      >
        Name
      </label>
      <div
        className="input__wrapper"
      >
        <input
          className="input input__iconRight"
          onChange={[Function]}
          placeholder="name"
        />
        <div
          className="input__icon input__icon__right"
        >
          <img
            alt="input icon"
            src="/icons/eye-outline.svg"
          />
        </div>
      </div>
    </div>
    <div
      className="wrapper"
    >
      <label
        className="label"
      >
        Name
      </label>
      <div
        className="input__wrapper"
      >
        <input
          className="input input__iconLeft"
          onChange={[Function]}
          placeholder="name"
        />
        <div
          className="input__icon input__icon__left"
        >
          <img
            alt="input icon"
            src="/icons/eye-outline.svg"
          />
        </div>
      </div>
    </div>
    <div
      className="wrapper"
    >
      <label
        className="label"
      >
        Name
      </label>
      <div
        className="input__wrapper"
      >
        <input
          className="input input__iconLeft input__custom1"
          onChange={[Function]}
          placeholder="name"
        />
        <div
          className="input__icon input__icon__left"
        >
          <img
            alt="input icon"
            src="/icons/search.svg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Default 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "justifyContent": "space-between",
      "padding": "30px",
      "paddingTop": "20px",
    }
  }
>
  <p
    className=" ui-primary body_01 "
  >
    Body 01
  </p>
  <br />
  <p
    className=" ui-secondary body_02 "
  >
    Body 02
  </p>
  <br />
  <p
    className=" brand-secondary button "
  >
    Button
  </p>
  <br />
  <p
    className=" undefined label "
  >
    Label
  </p>
  <br />
  <p
    className=" undefined tagline "
  >
    Tagline
  </p>
  <br />
  <p
    className=" undefined caption "
  >
    Caption
  </p>
  <br />
  <p
    className=" undefined hint "
  >
    Hint
  </p>
</div>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<article
  style={
    Object {
      "backgroundColor": "#fff",
      "color": "#000",
      "fontFamily": "\\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif",
      "lineHeight": 1.4,
      "padding": 15,
    }
  }
>
  <h1>
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample 
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottom": "1px solid #1474f3",
          "borderLeft": "none",
          "borderRight": "none",
          "borderTop": "none",
          "color": "#1474f3",
          "cursor": "pointer",
          "font": "inherit",
          "padding": 0,
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      type="button"
    >
      stories
    </button>
     for a component called 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
     stories located at 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories/1-Button.stories.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the 
    <a
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      style={
        Object {
          "borderBottom": "1px solid #1474f3",
          "color": "#1474f3",
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      target="_blank"
    >
      Writing Stories
    </a>
     section in our documentation.
  </p>
  <p
    style={
      Object {
        "opacity": 0.5,
      }
    }
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;
